--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=T2-SW_CastilloAlfredo
+spring.datasource.url=jdbc:mysql://localhost:3306/bdt2castillo?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=mysql
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
